--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ aws.dynamodb.endpoint=https://dynamodb.us-east-2.amazonaws.com
 aws.region=us-east-2
 
 ## aws generate aws access key after creating user
-aws.dynamodb.accessKey=AKIAUBQ44IVOSMKBPLU5
+aws.dynamodb.accessKey=
 
 ## aws generate aws secret key after creating user
-aws.dynamodb.secretKey=0QlN8bqtJksii1VU2HWHZvdqFfazTPgZwWbxrQKP
+aws.dynamodb.secretKey=
